--- a/src/pages/merchant/components/MerchantSideBar.css
+++ b/src/pages/merchant/components/MerchantSideBar.css
@@ -1,19 +1,26 @@
 /* MerchantSideBar.css */
+
+/* Import the Darker Grotesque font */
+@import url('https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300..600&display=swap');
+
+/* Apply the font to the sidebar */
 .sidebar {
-    width: 250px;
-    background-color: #2c3e50; /* Dark grey background */
+    width: 170px;
+    background-color: #191a1b; /* Dark grey background */
     color: white;
     height: 100vh;
     position: fixed;
     top: 0;
     left: 0;
     padding: 1rem;
+    font-family: "Darker Grotesque", sans-serif; /* Apply the Darker Grotesque font */
 }
 
 .sidebar-title {
-    font-size: 1.5rem;
+    font-size: 2.5rem;
     margin-bottom: 1rem;
-    font-weight: bold;
+    font-weight: 600; /* Semi-bold */
+    font-family: "Darker Grotesque", sans-serif; /* Apply the Darker Grotesque font */
 }
 
 .sidebar-menu {
@@ -30,8 +37,11 @@
     text-decoration: none;
     font-size: 1.1rem;
     display: block;
+    font-weight: 600; /* Semi-bold */
+    font-family: "Darker Grotesque", sans-serif; /* Apply the Darker Grotesque font */
 }
 
 .sidebar-link:hover {
-    text-decoration: underline;
+    text-decoration: unset;
+    color: rgb(209, 23, 23);
 }
