--- a/src/pages/merchant/components/MerchantSideBar.css
+++ b/src/pages/merchant/components/MerchantSideBar.css
@@ -6,21 +6,21 @@
 /* Apply the font to the sidebar */
 .sidebar {
     width: 170px;
-    background-color: #191a1b; /* Dark grey background */
+    background-color: #191a1b;
     color: white;
     height: 100vh;
     position: fixed;
     top: 0;
     left: 0;
     padding: 1rem;
-    font-family: "Darker Grotesque", sans-serif; /* Apply the Darker Grotesque font */
+    font-family: "Darker Grotesque", sans-serif; 
 }
 
 .sidebar-title {
     font-size: 2.5rem;
     margin-bottom: 1rem;
-    font-weight: 600; /* Semi-bold */
-    font-family: "Darker Grotesque", sans-serif; /* Apply the Darker Grotesque font */
+    font-weight: 600; 
+    font-family: "Darker Grotesque", sans-serif; 
 }
 
 .sidebar-menu {
@@ -37,8 +37,8 @@
     text-decoration: none;
     font-size: 1.1rem;
     display: block;
-    font-weight: 600; /* Semi-bold */
-    font-family: "Darker Grotesque", sans-serif; /* Apply the Darker Grotesque font */
+    font-weight: 800; 
+    font-family: "Darker Grotesque", sans-serif; 
 }
 
 .sidebar-link:hover {
